# tg-bot

./: .gitignore  config.py  main.py  pyproject.toml
routers/: handlers.py
routers/commands/: base_commands.py
src/: config.py  main.py
src/keyboards/: inline_kb.py  plan_period_inline_kb.py  reply_kb.py  service_inline_kb.py  subscription_inline_kb.py
src/keyboards/inline_kb/: confirm_inline_kb.py  edit_email_only_inline_kb.py  service_inline_kb.py  subscription_inline_kb.py  yes_no_inline_kb.py
src/keyboards/music_keyboard/: plan_inline_kb.py  plan_period_inline_kb.py  yes_no_inline_kb.py
src/keyboards/other_keyboard/: yes_no_inline_kb.py
src/keyboards/spotify_keyboard/: plan_period_inline_kb.py
src/keyboards/tg_keyboard/: contact_reply_kb.py  plan_inline_kb.py
src/messages/: base_texts.py  music_prompts.py  other_prompts.py  prompts.py  spotify_prompts.py  texts.py  tg_prompts.py
src/routers/callback_handlers/: services.py
src/routers/commands/: anti_spam.py  base_commands.py  user_commands.py
src/routers/request_handlers/: music_handler.py  other_handler.py  spotify_handler.py  telegram_handler.py
src/states/: spotify_states.py  states.py  tg_states.py
src/validators/: email_validator.py
