[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "black>=25.1.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]
